[2023.7.22]
- Fixed bug where an exception was thrown when running a proxy and an HTTP was returned by the (https://github.com/dukeofharen/httplaceholder/pull/317).

[2023.7.7]
- Fixed bug where some header values were not accepted by the .NET HttpClient when a reverse proxy was used. An example is the `User-Agent` value `WordPress/6.2.2; http://localhost:8010` (https://github.com/dukeofharen/httplaceholder/pull/314).
- The self-signed certificate for HTTPS traffic has been replaced (https://github.com/dukeofharen/httplaceholder/pull/315).
- Fixed bug in mapping of request (https://github.com/dukeofharen/httplaceholder/pull/316).

# BREAKING CHANGES
- If you, for some reason, depend on the SSL certificate, you might need to do an update on your side.

[2023.6.30]
- Split form helper buttons into 4 separate buttons (https://github.com/dukeofharen/httplaceholder/pull/305).
- Updated the CodeMirror editor from 5 to 6 (https://github.com/dukeofharen/httplaceholder/pull/305).
- Added filter for variable handlers in the UI (https://github.com/dukeofharen/httplaceholder/pull/305).
- Only show "simple editor" button in UI if the stub is very large (https://github.com/dukeofharen/httplaceholder/pull/305).
- Build HttPlaceholder and all its dependencies in a Docker container (https://github.com/dukeofharen/httplaceholder/pull/305).
- Save binary request body as Base64 string (https://github.com/dukeofharen/httplaceholder/pull/306).
- Make it possible to download binary request body from the UI (https://github.com/dukeofharen/httplaceholder/pull/306).
- Render a posted image request body in the UI (https://github.com/dukeofharen/httplaceholder/pull/306).
- Render the response body in the UI the same way as the request body (https://github.com/dukeofharen/httplaceholder/pull/307).
- If a PDF is sent as request or returned as response, the PDF will be rendered in the UI (https://github.com/dukeofharen/httplaceholder/pull/307).